--- a/assets/css/login_styles.css
+++ b/assets/css/login_styles.css
@@ -1,85 +1,71 @@
-* {
-	box-sizing: border-box;
-}
-body{
-  margin: auto;
-  background-size: 100% 720px;
-  background-color: #D5CEBC;
+html>body {
+    color: black;
 }
 .title_form{
-
   height: 100px;
-  text-align: center;
-  background-color: #9d8c62;
-  font-family: sans-serif;
   font-size: 40px;
   font-weight: bold;
   color: #2f2c1d;
   margin: auto;
 }
 .login_form{
-  width: 500px;
-  height: 200px;
+  width: 100%;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -250px;
+    margin-top: -250px;
+    padding: 20px 0;
   width: 500px;
-  height: 500px;
   text-align: center;
   background-color: #9d8c62;
-  border-radius: 4px;
-  margin: auto;
-  margin-top: 120px;
   border: 5px;
   border-radius: 2px;
   border-style: double;
 
 }
-input{
+input,
+button{
   height: 45px;
   width: 300px;
   font-size: 18px;
-  margin-top: 20px;
+  margin: 10px;
   background-color: #ece8df;
-  padding-left: 40px;
+  padding: 0 40px;
   color: #9d8c62;
+  border: none;
 }
+
 .form_input::before{
   position: absolute;
-  font-family: serif;
   padding-left: 5px;
   padding-top: 5px;
   font-size: 30px;
 
 }
-.login_submit{
-  padding-left: 10px;
-  text-align: center;
-  color: #fff;
-  border-radius: 4px;
-  border: none;
-  background-color: inherit;
-}
-.register{
 
-  text-align: center;
-  padding-left: 10px;
+.login_submit,
+.register {
   color: #fff;
   border-radius: 4px;
   border: none;
-  background-color: inherit;
 }
-.register_btn{
-  width: 150px;
-  padding-left: 5px;
-  background-color: #290a0a;
-  color: white;
-}
-.login_btn{
-  width: 150px;
-  padding-left: 5px;
-  background-color: #290a0a;
-  color: white;
-}
+
+    #register-btn,
+    #login-btn{
+        text-align: center;
+        background-color: #290a0a;
+        color: white;
+        transition: opacity 0.3s;
+        cursor: pointer;
+    }
+    #register-btn:hover,
+    #login-btn:hover{
+        opacity: 0.7;
+    }
+
