--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,7 +53,7 @@ html > body {
 .anim,
 #colours > span,
 span.insert::after,
-div.ribbon { transition: transform 0.3s, width 0.6s; }
+nav, nav>a, nav>div { transition: 0.3s; }
 
 .noti {
     transition: height 2s;
@@ -67,6 +67,81 @@ div.ribbon { transition: transform 0.3s, width 0.6s; }
     	font-size: 18px;
     	display: block;
 	}
+
+nav {
+	z-index: 10;
+	position: absolute;
+	height: 100%;
+	width: 80%;
+	max-width: 320px;
+	box-shadow: 0 0 7px 0 gray;
+	transform: translateX(-102%);
+	border-right: 4px solid #968A72;
+	min-height: 600px;
+}
+
+	.nav-on { transform: none; }
+
+nav > a {
+	display: block;
+	min-height: 100px;
+	padding: 10px 14px;
+	text-decoration: none;
+	border-bottom: 1px solid #968A72;
+	color: #968A72;
+}
+
+	nav > a:hover { opacity: 0.7; }
+
+	.nava-on,
+	nav > a:hover { background-color: #968A72; color:white; }
+
+	nav img {
+		height: 80px;
+		width: 80px;
+		vertical-align: middle;
+	}
+	nav span {
+		font-size: 22px;
+		vertical-align: middle;
+		margin-left: 10px;
+		font-weight: bold;
+	}
+
+	#nav-avatar {
+		-webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+		clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+	}
+
+	#nav-pbrief {
+		display: inline-block;
+		vertical-align: middle;
+		position: relative;
+	}
+
+	.verbose { 
+		opacity: 1;
+		font-size: 18px;
+	}
+	.more { 
+		opacity: 0;
+		position: absolute;
+		left: 0;
+		font-size: 18px;
+	}
+	#nav-profile:hover .verbose { opacity: 0; }
+	#nav-profile:hover .more { opacity: 1; }
+
+
+#header {
+	width: 100%;
+	position: absolute;
+	z-index: 5;
+	height: 80px;
+	padding: 20px;
+	text-align: center;
+}
+
 
 #board-container {
 	width: 100%;
@@ -151,6 +226,7 @@ div.ribbon {
 	top: 50%;
 	transform: skew(-45deg) translate(-80px, -50%);
 	box-shadow: 0 0 10px 0 #333;
+	transition: width 0.7s;
 }
 
 	div.ribbon-on { width: 100vw; }
@@ -190,11 +266,13 @@ h3 { text-align: center; }
 
 #buttons {text-align: center; }
 
-	#buttons > img {
+	#buttons > img,
+	#header > img {
 		width: 20vw;
 		max-width: 80px;
 		cursor: pointer;
 		transition: opacity 0.3s;
 	}
 
-	#buttons > img:hover { opacity: 0.7; }
+	#buttons > img:hover,
+	#header > img:hover { opacity: 0.7; }
