--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,7 +47,7 @@ html > body {
 .cell-3  { width: 33.33%; height: 33.33%; }
 .cell-4  { width: 25%;    height: 25%;    }
 .cell-5  { width: 20%;    height: 20%;    }
-.cell-6  { width: 16.67%; height: 16.67%; }
+.cell-6  { width: 16.66%; height: 16.66%; }
 .cell-7  { width: 14.28%; height: 14.28%; }
 .cell-8  { width: 12.5%;  height: 12.5%;  }
 .cell-9  { width: 11.11%; height: 11.11%; }
@@ -59,7 +59,8 @@ html > body {
 span.insert::after,
 nav, nav>a, nav>div,
 .ribbons, 
-#size-dialog>img { transition: 0.3s; }
+.spinner > img,
+#levels>div { transition: 0.3s; }
 
 .noti {
     transition: height 2s;
@@ -195,7 +196,8 @@ nav > a {
     position: relative;
 }
 
-	#pattern > div {
+	#pattern > div,
+	#levels > div {
 		display: inline-block;
 		padding: 2px;
 		border: 2px solid #D5CEBC;
@@ -265,50 +267,29 @@ div.ribbon {
 	width: 100%;
 	height: 100%;
 	top: 0;
+	text-align: center; 
+	font-size: 30px; 
 }
 
-	#congrats > div { 
+	#dialogs>div { 
 		position: absolute;
 		text-align: center;
 		width: 100%;
-		top: 30%;
+		top: 45%;
+		transform: translateY(-50%);
 	 }
 	
-	#congrats img {
-		height: 120px;
-		width: 120px;
-	}
-
-	#size-dialog,
-	#name-dialog { 
-		text-align: center; 
-		font-size: 30px; 
-	}
-
-	#size-dialog {
-		position: absolute;
-		top: 40%;
-		left: 50%;
-		width: 100%;
-		transform: translate(-50%, -50%);
-	}
-
+	#congrats img,
 	#size-dialog > img {
-		height: 50px;
-		vertical-align: middle;
-		cursor: pointer;
-	}
-
-	#size-dialog > img:hover { opacity: 0.7; }
-	#size-dialog > img:nth-child(4) { transform: scale(-1 ,1); }
-	#size-dialog > img:last-child {
 		width: 120px;
 		height: 120px;
 	}
+	#size-dialog > img { cursor: pointer; }
 
-	#size-dialog > div {
+	#levels {
 		border: 4px solid #968A72;
-		transform: rotate(-45deg);
+	    transform: rotate(-45deg);
+	    margin: 80px auto;
 	}
 
 	#name-dialog > input {
@@ -320,6 +301,29 @@ div.ribbon {
 	    text-align: center;
     	margin-bottom: 30px;
 	}
+
+	#levels { font-size: 0;	}
+	#levels>div {
+		font-size: 30px;
+		line-height: 60px;
+		background-color: #D5CEBC;
+		cursor: pointer;
+	}
+	#levels>div:hover {
+		background-color: #968a72;
+		color: white;
+	}
+
+.spinner > img {
+		height: 50px;
+		vertical-align: middle;
+		cursor: pointer;
+	}
+
+	.spinner > img:hover { opacity: 0.7; }
+	.spinner > img:last-child { transform: scale(-1 ,1); }
+
+	.spinner > span { min-width: 130px; display: inline-block;}
 
 
 #lower {
