--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -262,7 +262,7 @@ div.ribbon {
 #congrats,
 #lower-mask,
 #dialogs { 
-	background-color: rgba(213, 206, 188, 0.8); /*#D5CEBC*/ 
+	background-color: rgba(213, 206, 188, 0.85); /*#D5CEBC*/ 
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -271,7 +271,8 @@ div.ribbon {
 	font-size: 30px; 
 }
 
-	#dialogs>div { 
+	#dialogs>div,
+	#congrats>div { 
 		position: absolute;
 		text-align: center;
 		width: 100%;
@@ -375,3 +376,6 @@ h3 { text-align: center; }
 
 	#buttons > img:hover,
 	#header > img:hover { opacity: 0.7; }
+
+
+#serversays { display: none; }
