--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,8 @@ span.insert::after,
 nav, nav>a, nav>div,
 .ribbons, 
 .spinner > img,
-#levels>div { transition: 0.3s; }
+#levels>div,
+#name-dialog > input { transition: 0.3s; }
 
 .noti {
     transition: height 2s;
@@ -332,6 +333,7 @@ div.ribbon {
 	bottom: 0;
 	width: 100%;
 	text-align: center;
+	padding-bottom: 20px;
 }
 
 h3 { text-align: center; }
