Adding admin page
JS code tested but only roughly. Use with caution.  Also some minor
changes here and there, and an example in routes sample

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,8 @@ html > body {
 	font-size: 20px; 
 }
 
+a { color: #968A72; text-decoration: none; }
+
 .disabled { display: none !important; }
 .hidden {opacity: 0; }
 .fade {opacity: 0.3; }
