--- a/assets/css/admin_styles.css
+++ b/assets/css/admin_styles.css
@@ -54,7 +54,7 @@ section { padding: 20px 3vw }
 		border-bottom: 2px solid #968A72; 
 	}
 
-	tr { padding: 3px 0 }
+	tr { padding: 3px 0; transition: 0.3s; }
 	tr:hover td{ background-color: #c7bea8;  }
 
 	table input {
