--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,18 @@ html > body {
 	font-size: 20px; 
 }
 
+.small { 
+	line-height: 18px;
+	margin: 0;
+	width: 100%;
+	font-size: 14px; 
+	text-align: center;
+	position: absolute;
+	bottom: 40px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
 a { color: #968A72; text-decoration: none; }
 
 .disabled { display: none !important; }
